--- a/front/index.html
+++ b/front/index.html
@@ -11,6 +11,11 @@
 <body>
   <div id="root"></div>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Playball&family=Poppins&family=Roboto:wght@500&display=swap"
+    rel="stylesheet">
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
